--- a/README
+++ b/README
@@ -1,5 +1,4 @@
 Список тест-кейсов для тестирования игральной кости.
-
 1. Размер и форма;
 2. Материал;
 3. Распределение веса;
@@ -7,3 +6,7 @@
 5. Тест на отскок;
 6. Тест на удобство использования;
 7. Повторяемость выпадения.
+
+1. Размер и форма: кости идеально симметричны и имеют одинаковые размеры, так как асимметричные или неровные кости могут привести к несправедливым результатам.
+
+
