--- a/README
+++ b/README
@@ -8,5 +8,7 @@
 7. Повторяемость выпадения.
 
 1. Размер и форма: кости идеально симметричны и имеют одинаковые размеры, так как асимметричные или неровные кости могут привести к несправедливым результатам.
+2. Материал: изготовлены ли кубики из высококачественных, прочных материалов, таких как пластик или акрил, и не подвержены ли они сколам, растрескиванию или выцветанию цвета.
+
 
 
