--- a/README
+++ b/README
@@ -9,6 +9,7 @@
 
 1. Размер и форма: кости идеально симметричны и имеют одинаковые размеры, так как асимметричные или неровные кости могут привести к несправедливым результатам.
 2. Материал: изготовлены ли кубики из высококачественных, прочных материалов, таких как пластик или акрил, и не подвержены ли они сколам, растрескиванию или выцветанию цвета.
+3. Распределение веса: кости имеют равномерное и сбалансированное распределение веса, что имеет решающее значение для действительно случайного результата броска.
 
 
 
