--- a/README
+++ b/README
@@ -1,4 +1,11 @@
-
+Список тест-кейсов для тестирования игральной кости.
+1. Размер и форма;
+2. Материал;
+3. Распределение веса;
+4. Точки или нумерация;
+5. Тест на отскок;
+6. Тест на удобство использования;
+7. Повторяемость выпадения.
 
 
 
